# game_chess

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Readme.md  tatus
.cargo/: _config.toml
.github/workflows/: Alpha.yml  AppropriateBranch.yml  AppropriateBranchBeta.yml  AppropriateBranchMaster.yml  AutoPr.yml  AutoPrToAlpha.yml  AutoPrToBeta.yml  AutoPrToMaster.yml  Beta.yml  BetaPrApprove.yml  Conditional.yml  Delete.yml  Deploy.yml  DesktopCommon.yml  DesktopPush.yml  Forward.yml  ForwardFromAlpha.yml  ForwardFromBeta.yml  ForwardToBeta.yml  ForwardToMaster.yml  MainPrApprove.yml  Production.yml  PullRequest.yml  Push.yml  RunsClean.yml  StandardRustPullRequest.yml  WebCommon.yml  WebPush.yml
doc/: Build.md  ChangesCommitting.md  FAQ.md  PrOpen.md  Prerequisites.md  Readme.md  Research.md  Resources.md  TicketsLabeling.md  ToolchainInstall.md
doc/platform/: Desktop.md  Web.md
module/: Readme.md
module/cli/: Cargo.toml
module/cli/src/: main.rs
module/client/: Cargo.toml
module/client/src/: client.rs  lib.rs  main.rs
module/core/: Cargo.toml  Readme.md
module/core/src/: ai.rs  lib.rs  main.rs  model.rs  timer.rs
module/core/tests/: core_tests.rs
module/cui/: .gitignore  Cargo.toml  Readme.md
module/cui/src/: main.rs  multiplayer.rs
module/cui/tests/: online_multiplayer.rs
module/game/: Cargo.toml  Makefile.toml  Readme.md
module/game/platform/desktop/: Makefile.toml
module/game/platform/web/: Makefile.toml
module/game/platform/web/static/: index.html
module/game/platform/web/step/: BrowserSync.ss  wasm_opt.rs
module/game/src/: camera.rs  common.rs  controls.rs  highlight.rs  input.rs  main.rs  main_menu.rs  multiplayer.rs  pause_menu.rs  piece.rs  settings.rs
module/game/src/multiplayer/: async_task.rs  loading.rs  menu.rs  mod.rs
module/multiplayer/: Cargo.toml  build.rs  rustfmt.toml
module/multiplayer/proto/: chess_game.proto
module/multiplayer/src/: lib.rs
module/proto/: chess_game.proto
module/renderer/: Cargo.toml  Makefile.toml  Readme.md
module/renderer/platform/desktop/: Makefile.toml
module/renderer/platform/web/: Makefile.toml  package.json
module/renderer/platform/web/step/: BrowserSync.ss
module/renderer/src/: main.rs
module/sample_board_draw/: Cargo.toml  Readme.md
module/sample_board_draw/src/: draw.rs  main.rs  prev.rs
module/sample_board_draw_simpler/: Cargo.toml
module/sample_board_draw_simpler/src/: main.rs
module/sample_core_best_move/src/: main.rs
module/sample_core_board_score/: Cargo.toml
module/sample_core_board_score/src/: main.rs
module/sample_core_chess_game/src/: main.rs
module/sample_core_move_check/src/: main.rs
module/sample_core_move_profitability/: Cargo.toml  Readme.md
module/sample_core_move_profitability/src/: main.rs
module/sample_core_possible_moves/src/: main.rs
module/sample_desk_draw/: Cargo.toml  Readme.md
module/sample_desk_draw/src/: main.rs
module/sample_gui_with_board/: Cargo.toml  Readme.md
module/sample_gui_with_board/src/: draw.rs  main.rs
module/sample_gui_with_desk/: Cargo.toml  Readme.md
module/sample_gui_with_desk/src/: draw.rs  main.rs
module/sample_mouse_event_detection/: Cargo.toml
module/sample_mouse_event_detection/src/: main.rs
module/sample_mouse_position_to_board/: Cargo.toml  Readme.md
module/sample_mouse_position_to_desk/: Cargo.toml  Readme.md
module/sample_mouse_position_to_desk/src/: main.rs
module/sample_mouse_position_translation/: Cargo.toml
module/sample_mouse_position_translation/src/: main.rs
module/sample_simple_grpc/server/: build.rs
module/sample_simple_gui/: Cargo.toml
module/sample_simple_gui/src/: main.rs
module/sample_sprite/: Cargo.toml
module/sample_sprite/src/: main.rs
module/sample_sprite_partial/: Cargo.toml  Readme.md
module/sample_sprite_partial/src/: main.rs
module/sample_text/src/: main.rs
module/sample_text_mesh/: Cargo.toml  Readme.md
module/sample_text_mesh/src/: main.rs
module/sample_x/bevy/: text.rs  text_mesh.rs
module/server/: Cargo.toml  Readme.md  build.rs
module/server/src/: lib.rs  main.rs  rpc_server.rs
module/server/src/store/: memory.rs  mod.rs
sample/: Readme.md
sample/board_draw/: Cargo.toml
sample/board_draw/src/: main.rs
sample/board_draw_simpler/: Cargo.toml
sample/board_draw_simpler/src/: main.rs
sample/core_best_move/: Cargo.toml
sample/core_best_move/src/: main.rs
sample/core_board_debug/: Cargo.toml
sample/core_board_debug/src/: main.rs
sample/core_board_score/: Cargo.toml  Readme.md
sample/core_board_score/src/: main.rs
sample/core_chess_game/: Cargo.toml
sample/core_chess_game/src/: main.rs
sample/core_move_check/: Cargo.toml
sample/core_move_check/src/: main.rs
sample/core_possible_moves/: Cargo.toml
sample/core_possible_moves/src/: main.rs
sample/gui_with_board/: Cargo.toml
sample/gui_with_board/src/: draw.rs  main.rs
sample/mesh/: Cargo.toml  Readme.md
sample/mesh/src/: main.rs
sample/mouse_event_detection/: Cargo.toml  Readme.md
sample/mouse_event_detection/src/: main.rs
sample/mouse_position_to_board/: Cargo.toml
sample/mouse_position_to_board/src/: main.rs
sample/mouse_position_translation/: Cargo.toml  Readme.md
sample/mouse_position_translation/src/: main.rs
sample/sample_core_board_debug/: Cargo.toml
sample/sample_core_move_check/: Cargo.toml
sample/sample_core_possible_moves/: Cargo.toml
sample/sample_core_possible_moves/src/: main.rs
sample/sample_mouse_event_detection/src/: main.rs
sample/sample_text/: Cargo.toml
sample/sample_text_mesh/: Cargo.toml
sample/simple_grpc/: README.md
sample/simple_grpc/client/: Cargo.toml  build.rs
sample/simple_grpc/proto/: example.proto
sample/simple_grpc/server/: Cargo.toml  build.rs
sample/simple_gui/: Cargo.toml  Readme.md
sample/simple_gui/src/: main.rs
sample/sprite/: Cargo.toml  Readme.md
sample/sprite/src/: main.rs
sample/sprite_partial/: Cargo.toml
sample/text/: Cargo.toml  Readme.md
sample/text_mesh/: Cargo.toml
sample/translation_system/: Cargo.toml  Readme.md
saves/: 1644078066.save
(+8 files in other folders)
