[package]
name = "game_chess_client"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
  "Pavlo Myroniuk <pspos.developqkation@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_chess"
repository = "https://github.com/obox-systems/game_chess/"
homepage = "https://github.com/obox-systems/game_chess/"
description = """
Chess game client implemented for educational purpose.
"""
categories = [ "game-development", "games" ]
keywords = [ "chess", "gamedev" ]
include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[dependencies]
game_chess_core = { version = "~0.0", path = "../core" }
multiplayer = { path = "../multiplayer" }
tonic = "0.8.2"
async-compat = "0.2.1"
thiserror = "1.0.37"
