[package]
name = "game_chess_client"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
  "Pavlo Myroniuk <pspos.developqkation@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_chess"
repository = "https://github.com/obox-systems/game_chess/"
homepage = "https://github.com/obox-systems/game_chess/"
description = """
Chess game client implemented for educational purpose.
"""
categories = [ "game-development", "games" ]
keywords = [ "chess", "gamedev" ]
include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[dependencies]
game_chess_core = { version = "~0.0", path = "../core" }
multiplayer = { path = "../multiplayer" }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt"] }

[target.'cfg( not( target_arch = "wasm32" ) )'.dependencies]
tonic = "0.8.2"
lazy_static = "1.4.0"

[target.'cfg( target_arch = "wasm32" )'.dependencies]
tonic = { version = "0.8.2", default-features = false, features = [ "prost", "codegen" ] }
tonic-web-wasm-client = "0.2.2"
