[package]
name = "game_chess"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_chess"
repository = "https://github.com/Wandalen/game_chess/"
homepage = "https://github.com/Wandalen/game_chess/"
description = """
Chess game implemented on Bevy for educational purpose.
"""
categories = ["game-development", "games"]
keywords = ["chess", "gamedev"]
include = ["/src", "/Cargo.toml", "/Readme.md", "/License"]
default-run = "game"

[features]
fast_build = ["bevy/dynamic"]
web = ["bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png"]
gui = []
default = ["gui"]

[[bin]]
name = "game_web"
path = "./src/main.rs"
required-features = ["web"]

[[bin]]
name = "game"
path = "./src/main.rs"

[dependencies]
bevy_interact_2d = "0.5.3"
game_chess_core = { package = "game_chess_core", version = "~0.0", path = "../core" }
bevy_egui = "0.9.0"

[target.'cfg( not ( target_arch = "wasm32" ) )'.dependencies]
bevy = { version = "0.5" }

[target.'cfg( target_arch = "wasm32" )'.dependencies]
bevy = { version = "0.5", default-features = false }
tracing-wasm = "=0.2.0"
bevy_webgl2 = "0.5"
