[package]
name = "game_chess"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_chess"
repository = "https://github.com/Wandalen/game_chess/"
homepage = "https://github.com/Wandalen/game_chess/"
description = """
Chess game implemented on Bevy for educational purpose.
"""
categories = [ "game-development", "games" ]
keywords = [ "chess", "gamedev" ]
include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]
default-run = "game"

[features]
fast_build = [ "bevy/dynamic" ]
web = [ "bevy/bevy_gltf", "bevy/bevy_winit", "bevy/render", "bevy/png" ]
gui = []
diagnostic = []
default = [ "gui" ]

[[bin]]
name = "game_web"
path = "./src/main.rs"
required-features = [ "web" ]

[[bin]]
name = "game"
path = "./src/main.rs"

[dependencies]
game_chess_core = { package = "game_chess_core", version = "~0.0", path = "../core" }
game_chess_client = { path = "../client" }
bevy_egui = "0.19.0"
bevy_reflect = "~0.9"
bevy_ecs = "~0.9"
futures-channel = "0.3.24"

bevy_kira_audio = { version = "0.13.0", features = [ "mp3" ] }
bevy_interact_2d = "0.9.0"

[dependencies.bevy]
version = "~0.9"
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher"
]


[target.'cfg( target_arch = "wasm32" )'.dependencies]
tracing-wasm = "~0.2"
