[package]
name = "multiplayer"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
  "Pavlo Myroniuk <pspos.developqkation@gmail.com>",
]

description = """
Chess multiplayer library implemented for educational purpose.
"""
categories = [ "game-development", "games" ]
keywords = [ "chess", "gamedev" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "~0.3", features = ["parsing", "formatting"] }
prost = "0.11.0"
game_chess_core = {path="../core"}

[target.'cfg( not( target_arch = "wasm32" ) )'.dependencies]
tonic = "0.8.2"

[target.'cfg( target_arch = "wasm32" )'.dependencies]
tonic = { version = "0.8.2", default-features = false, features = [ "prost", "codegen" ] }

[build-dependencies]
tonic-build = { version = "0.8.2", default-features = false, features = [ "prost" ] }
