[package]
name = "game_chess"
version = "0.0.1"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
  "Volodymyr M. <volodymyr.migdal@gmail.com>",
  "Dmytro Kryvoruchko <dm.vict.kr@gmail.com>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/game_chess"
repository = "https://github.com/obox-systems/game_chess/"
homepage = "https://github.com/obox-systems/game_chess/"
description = """
Neutral cross-platform Rust game template.
"""
categories = [ "game-development", "game-engines" ]
keywords = [ "chess", "gamedev" ]
default-run = "desktop"
include = [
  "/src",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

[features]
web = []
desktop = []
default = [ "desktop" ]

[lib]
name = "game_chess"
crate-type = [ "staticlib", "lib", "cdylib" ]
path = "./src/main.rs"

[[bin]]
name = "web"
path = "./src/main.rs"
required-features = [ "web" ]

[[bin]]
name = "desktop"
path = "./src/main.rs"

[dependencies]
# state of the art game engine
bevy = { version = "0.5" }